# R_GEMINI

./: README.md
spooky/: .env  Cargo.toml
spooky/src/: main.rs
