[package]
name = "spooky"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"   # For loading API keys securely
tokio = { version = "1", features = ["full"] }
anyhow="1.0"